interests, username change

--- a/client/views/users/profile.html
+++ b/client/views/users/profile.html
@@ -1,22 +1,21 @@
 <template name="usersProfile">
-    <div class="container">
-        <!--Breadcrumbs-->
-        <ol class="breadcrumb">
-            <li><a href="{{pathFor 'sitesIndex'}}">Home</a></li>
-            <li><a href="{{pathFor 'usersIndex'}}">Users</a></li>
-            <li class="active">view</li>
-        </ol>
-
-        {{#with model}}
-        <div class="title">
-            <h3 class="pull-left">User Profile #{{_id}}</h3>
-        </div>
-        <div class="clearfix"></div>
-        <div class="row">
-          <div class="avatar-container-prof">
+<div class="container">
+    <!--Breadcrumbs-->
+    <ol class="breadcrumb">
+        <li><a href="{{pathFor 'sitesIndex'}}">Home</a></li>
+        <li><a href="{{pathFor 'usersIndex'}}">Users</a></li>
+        <li class="active">view</li>
+    </ol>
+    {{#with model}}
+    <div class="title">
+        <h3 class="pull-left">User Profile #{{_id}}</h3>
+    </div>
+    <div class="clearfix"></div>
+    <div class="row">
+        <div class="avatar-container-prof">
             {{> avatar}}
-          </div>
-          <div class="profile-info">
+        </div>
+        <div class="profile-info">
             <table class="table">
                 <tbody>
                     <tr>
@@ -33,75 +32,78 @@
                     </tr>
                 </tbody>
             </table>
-          </div>
         </div>
-                <hr/>
-
-        <h4>Change Profile</h4>
-
-        <form id="change_profile_form">
-            <div class="form-group">
-                <label for="name" class="control-label">Name *</label>
-                <input type="text" id="name" value="{{profile.name}}" placeholder="Name" disabled class="form-control">
-                <label for="acctType" class="control-label">Account Type</label>
-                <select id="acctType" placeholder="Name" class="form-control" name="acctType" >
-                    <option></option>
-                    <option value="1" {{getSelected profile.acctType "1"}}>Individual</option>
-                    <option value="2" {{getSelected profile.acctType "2"}}>Group</option>
-                    <option value="3" {{getSelected profile.acctType "3"}}>Non Profit</option>
-                    <option value="4" {{getSelected profile.acctType "4"}}>Social Enterprise</option>
-                    <option value="5" {{getSelected profile.acctType "5"}}>Company</option>
-                </select>
-                <label for="displayName" class="control-label">Display Name</label>
-                <input type="text" id="displayName" value="{{profile.displayName}}" placeholder="Display Name" class="form-control">
-                <label for="fName" class="control-label">First Name</label>
-                <input type="text" id="fName" value="{{profile.fName}}" placeholder="First Name" class="form-control">
-                <label for="lName" class="control-label">Last Name</label>
-                <input type="text" id="lName" value="{{profile.lName}}" placeholder="Last Name" class="form-control">
-                <label for="lName" class="control-label">Last Name</label>
-
-                <label for="bio" class="control-label">User Bio</label>
-                <input type="text" id="bio" value="{{profile.bio}}" placeholder="bio" class="form-control">
-                {{> countryInput}}
-                <label for="city" class="control-label">City</label>
-                <input type="text" id="city" value="{{profile.city}}" placeholder="City" class="form-control">
-                <label for="address" class="control-label">Address</label>
-                <input type="text" id="address" value="{{profile.address}}" placeholder="Address" class="form-control">
-                <label for="ImgThumb" class="control-label">Image Thumb</label>
-                <input type="text" id="ImgThumb" value="{{profile.ImgThumb}}" placeholder="ImgThumb" class="form-control">
-                <label for="ImgLarge" class="control-label">Image Large</label>
-                <input type="text" id="ImgLarge" value="{{profile.ImgLarge}}" placeholder="ImgLarge" class="form-control">
-                <label for="ImgHeader" class="control-label">Image for Header</label>
-                <input type="text" id="ImgHeader" value="{{profile.ImgHeader}}" placeholder="ImgHeader" class="form-control">
-                <label for="Avatar" class="control-label">Avatar</label>
-                <input type="text" id="Avatar" value="{{profile.Avatar}}" placeholder="Avatar" class="form-control">
-                <label for="dob" class="control-label">Date of Birth</label>
-                <input type="text" id="dob" value="{{profile.dob}}" placeholder="dob" class="form-control">
-                <label for="sex" class="control-label">Sex</label>
-                <input type="text" id="sex" value="{{profile.sex}}" placeholder="sex" class="form-control">
-            </div>
-            <button id="btnChangeProfile" type="submit" class="btn btn-success">Submit</button>
-        </form>
-
-        {{/with}}
-        <hr/>
-
-        <h4>Change Password</h4>
-
-        <form id="change_password_form">
-            <div class="form-group">
-                <label for="oldPassword" class="control-label">Old Password *</label>
-                <input type="password" id="oldPassword" placeholder="Old Password" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="newPassword" class="control-label">New Password *</label>
-                <input type="password" id="newPassword" placeholder="New Password" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="confirmNewPassword" class="control-label">Confirm New Password *</label>
-                <input type="password" id="confirmNewPassword" placeholder="Confirm New Password" class="form-control">
-            </div>
-            <button id="btnChangePassword" type="submit" class="btn btn-success">Submit</button>
-        </form>
     </div>
+    <hr/>
+    <h4>Change Profile</h4>
+    <form id="change_profile_form">
+        <div class="form-group">
+            <div class="username-container">
+                <label for="name" class="control-label">Name * <i>You can to change name only once!</i></label>
+                {{#if allowChangeName}}
+                    <input type="text" id="name" value="{{profile.name}}" placeholder="Name" class="form-control" contenteditable>
+                    <input type="button" value="Change" class="btn btn-default change-username-btn">
+                {{else}}
+                    <input type="text" id="name" value="{{profile.name}}" placeholder="Name" class="form-control" disabled>
+                {{/if}}
+            </div>
+            <label for="acctType" class="control-label">Account Type</label>
+            <select id="acctType" placeholder="Name" class="form-control" name="acctType" >
+                <option></option>
+                <option value="1" {{getSelected profile.acctType "1"}}>Individual</option>
+                <option value="2" {{getSelected profile.acctType "2"}}>Group</option>
+                <option value="3" {{getSelected profile.acctType "3"}}>Non Profit</option>
+                <option value="4" {{getSelected profile.acctType "4"}}>Social Enterprise</option>
+                <option value="5" {{getSelected profile.acctType "5"}}>Company</option>
+            </select>
+            <label for="displayName" class="control-label">Display Name</label>
+            <input type="text" id="displayName" value="{{profile.displayName}}" placeholder="Display Name" class="form-control">
+            <label for="fName" class="control-label">First Name</label>
+            <input type="text" id="fName" value="{{profile.fName}}" placeholder="First Name" class="form-control">
+            <label for="lName" class="control-label">Last Name</label>
+            <input type="text" id="lName" value="{{profile.lName}}" placeholder="Last Name" class="form-control">
+            <label for="lName" class="control-label">Last Name</label>
+            <label for="bio" class="control-label">User Bio</label>
+            <input type="text" id="bio" value="{{profile.bio}}" placeholder="bio" class="form-control">
+            {{> countryInput}}
+            <label for="city" class="control-label">City</label>
+            <input type="text" id="city" value="{{profile.city}}" placeholder="City" class="form-control">
+            <label for="address" class="control-label">Address</label>
+            <input type="text" id="address" value="{{profile.address}}" placeholder="Address" class="form-control">
+            <label for="ImgThumb" class="control-label">Image Thumb</label>
+            <input type="text" id="ImgThumb" value="{{profile.ImgThumb}}" placeholder="ImgThumb" class="form-control">
+            <label for="ImgLarge" class="control-label">Image Large</label>
+            <input type="text" id="ImgLarge" value="{{profile.ImgLarge}}" placeholder="ImgLarge" class="form-control">
+            <label for="ImgHeader" class="control-label">Image for Header</label>
+            <input type="text" id="ImgHeader" value="{{profile.ImgHeader}}" placeholder="ImgHeader" class="form-control">
+            <label for="Avatar" class="control-label">Avatar</label>
+            <input type="text" id="Avatar" value="{{profile.Avatar}}" placeholder="Avatar" class="form-control">
+            <label for="dob" class="control-label">Date of Birth</label>
+            <input type="text" id="dob" value="{{profile.dob}}" placeholder="dob" class="form-control">
+            <label for="sex" class="control-label">Sex</label>
+            <input type="text" id="sex" value="{{profile.sex}}" placeholder="sex" class="form-control">
+        </div>
+        <button id="btnChangeProfile" type="submit" class="btn btn-success">Submit</button>
+    </form>
+    {{/with}}
+    <hr/>
+    <h4>Change Password</h4>
+    <form id="change_password_form">
+        <div class="form-group">
+            <label for="oldPassword" class="control-label">Old Password *</label>
+            <input type="password" id="oldPassword" placeholder="Old Password" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="newPassword" class="control-label">New Password *</label>
+            <input type="password" id="newPassword" placeholder="New Password" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="confirmNewPassword" class="control-label">Confirm New Password *</label>
+            <input type="password" id="confirmNewPassword" placeholder="Confirm New Password" class="form-control">
+        </div>
+        <button id="btnChangePassword" type="submit" class="btn btn-success">Submit</button>
+    </form>
+    <hr/>
+    {{> Interests}}
+</div>
 </template>
