sending system emails

--- a/client/views/users/interests.html
+++ b/client/views/users/interests.html
@@ -17,11 +17,8 @@
 <form id="add-interest-form">
 	<div class="form-group">
 		<div class="username-container">
-			<label for="new-interest-name" class="control-label">Title</label>
 			<input type="text" id="new-interest-name" placeholder="photo" class="form-control" contenteditable>
-			<label for="new-interest-order" class="control-label">Order</label>
-			<input type="textarea" id="new-interest-order" placeholder="order" class="form-control" contenteditable>
-			<input type="button" rows=3 value="Submit" class="btn btn-primary add-interest-btn">
+			<input type="button" rows="3" value="Submit" class="btn btn-primary add-interest-btn">
 		</div>
 	</div>
 </form>
