Date picker for dob in user profile

--- a/client/views/users/profile.html
+++ b/client/views/users/profile.html
@@ -79,7 +79,7 @@
             <label for="Avatar" class="control-label">Avatar</label>
             <input type="text" id="Avatar" value="{{profile.Avatar}}" placeholder="Avatar" class="form-control">
             <label for="dob" class="control-label">Date of Birth</label>
-            <input type="text" id="dob" value="{{profile.dob}}" placeholder="dob" class="form-control">
+            <input type="text" id="dob" value="{{profile.dob}}" placeholder="dob" class="form-control date-of-birth">
             <label for="sex" class="control-label">Sex</label>
             <input type="text" id="sex" value="{{profile.sex}}" placeholder="sex" class="form-control">
         </div>
