--- a/client/views/users/avatar/browse_image/browse_image.html
+++ b/client/views/users/avatar/browse_image/browse_image.html
@@ -3,7 +3,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 Upload an image
-                <button type="button" class="close close-avatar-modal-btn" data-dismiss="modal"
+                <button type="button" class="close" data-dismiss="modal"
                         aria-label="Close"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="panel-body">
@@ -19,8 +19,6 @@
                         </div>
                     </div>
                 </form>
-
-
             </div>
         </div>
         <!-- /.panel -->
