--- a/client/views/users/profile.html
+++ b/client/views/users/profile.html
@@ -35,7 +35,7 @@
         <form id="change_profile_form">
             <div class="form-group">
                 <label for="name" class="control-label">Name *</label>
-                <input type="text" id="name" value="{{profile.name}}" placeholder="Name" disabled class="form-control">
+                <input type="text" id="name" value="{{profile.name}}" placeholder="Name" class="form-control">
                 <label for="acctType" class="control-label">Account Type</label>
                 <select id="acctType" placeholder="Name" class="form-control" name="acctType" >
                     <option></option>
