newsFeed added with Feed and Suggest items sidebar items to newsFeedIndex

--- a/client/views/suggests/insert.html
+++ b/client/views/suggests/insert.html
@@ -12,8 +12,26 @@
                 <h3 class="pull-left">Insert Suggests</h3>
             </div>
             <div class="clearfix"></div>
+    <b>Posts List</b><br />
+            {{#each sugPosts}}
+                {{title}}
+                <a class="btn btn-success" id= "sugPostsAdd" href="#">Add to Suggestions List</a>
+                <br /><br />
+            {{/each}}
+    <b>Campaigns List</b><br />
+            {{#each sugCampaigns}}
+                {{title}}
+                <a class="btn btn-success" id= "sugCampsAdd" href="#">Add to Suggestions List</a>
+                <br /><br />
+            {{/each}}
+    <b>Projects List</b><br />
+            {{#each sugProjects}}
+                {{title}}
+                <a class="btn btn-success" id= "sugProjsAdd" href="#">Add to Suggestions List</a>
+                <br /><br />
+            {{/each}}
 
-            {{> suggests_form}}  
+            {{> suggests_form}}
         </div>        
     </div>
 </template>
