--- a/client/templates/basic/header.html
+++ b/client/templates/basic/header.html
@@ -18,6 +18,7 @@
                      <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">CRUDs<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
+                            <li><a href="{{pathFor 'postsIndex'}}">Posts</a></li>
                             <li><a href="#">Dashboard -tobdone</a></li>
                             <li><a href="{{pathFor 'followListsIndex'}}">Follow Lists</a></li>
                             <li class="divider"></li>
@@ -25,7 +26,7 @@
                             <li><a href="{{pathFor 'campaignsIndex'}}">Campaigns</a></li>
                             <li><a href="{{pathFor 'causesIndex'}}">Causes</a></li>
                             <li><a href="{{pathFor 'blogIndex'}}">Blog</a></li>
-                            <li><a href="#">News Feed</a></li>
+                            <li><a href="{{pathFor 'newsFeedIndex'}}">News Feed</a></li>
                             <li><a href="{{pathFor 'suggestsIndex'}}">Suggest</a></li>
                             <li><a href="{{pathFor 'messagesIndex'}}">Messages</a></li>
                             <li><a href="{{pathFor 'notificationsIndex'}}">Notifications</a></li>
@@ -42,8 +43,6 @@
                     <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Purge em <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="{{pathFor 'postsIndex'}}">Posts</a></li>
-                        <li class="divider"></li>
                         <li><a href="#">Teams</a></li>
                         <li><a href="#">Jobs</a></li>
                     </ul>
