--- a/client/views/newsFeedsLiked/index.html
+++ b/client/views/newsFeedsLiked/index.html
@@ -1,54 +1,20 @@
-
-
-<template name="newsFeedIndex">
-    {{> nFlikedOrNot}}
-
-<p class="item_feed">-- -- --- </p>
-<b>News Feed items >>> </b> <br /><br />
-    <!--{{feeds}}-->
-    {{#each feeds}}
-
-        {{#if equals itemType 'posts'}}
-             Posts >>>
-            {{> TplShowPost}}<br />
-        {{/if}}
-
-        {{#if equals itemType 'campaigns'}}
-             Campaigns >>>
-            {{> TplShowCampaign}}<br />
-        {{/if}}
-
-        {{#if equals itemType 'projects'}}
-             Projects >>>
-            {{> TplShowProject}}<br />
-        {{/if}}
-
-    {{/each}}
-
-<p>-- -- --- </p>
-
-    <b>Suggests List</b>
-    {{> tplSuggestPosts}}<br />
-    {{> tplSuggestCamps}}<br />
-    {{> tplSuggestProjs}}<br />
-
-
+<template name="newsFeedsLikedIndex">
     <div class="container">
         <!--Breadcrumbs-->
         <ol class="breadcrumb">
             <li><a href="{{pathFor 'sitesIndex'}}">Home</a></li>
-            <li><a href="{{pathFor 'newsFeedIndex'}}">NewsFeed</a></li>
+            <li><a href="{{pathFor 'newsFeedsLikedIndex'}}">NewsFeedsLiked</a></li>
             <li class="active">index</li>
         </ol>
 
         <div class="title">
-            <h3 class="pull-left">NewsFeed</h3>
+            <h3 class="pull-left">NewsFeedsLiked</h3>
         </div>
         <div class="clearfix"></div>
 
         <div class="toolbar">
             <div class="pull-left">
-                <a class="btn btn-success" href="{{pathFor 'newsFeedInsert'}}">Insert</a>
+                <a class="btn btn-success" href="{{pathFor 'newsFeedsLikedInsert'}}">Insert</a>
                 <a id="btnRemoveAll" class="btn btn-danger">Remove Selection</a>
             </div>   
             <div class="quick-search pull-right col-xs-12 col-md-3">
@@ -70,8 +36,8 @@
                 <thead>
                     <tr>
                         <th style="width: 30px;"><input type="checkbox" id="checkAll"/></th>                        
-                        <th id="btnSortheaderImg" class="{{meteorisGridViewSortClass 'headerImg'}}">HeaderImg</th>
-<th id="btnSortcolorStyles" class="{{meteorisGridViewSortClass 'colorStyles'}}">ColorStyles</th>
+                        <th id="btnSortitemId" class="{{meteorisGridViewSortClass 'itemId'}}">ItemId</th>
+<th id="btnSortorder" class="{{meteorisGridViewSortClass 'order'}}">Order</th>
 
                         <!--<th>Image</th>-->                    
                         <th>Created by</th>                    
@@ -82,14 +48,14 @@
                     {{#each models}}
                     <tr>
                         <td><input type="checkbox" class="checkAll" value="{{_id}}"/></td>
-                        <td>{{headerImg}}</td>
-<td>{{colorStyles}}</td>
+                        <td>{{itemId}}</td>
+<td>{{order}}</td>
 
                         <!--<td><img class="image" src="{{#if image}}{{app "baseUrl"}}{{image.url}}{{else}}{{app "baseUrl"}}/images/noimage.jpg{{/if}}"/></td>-->
                         <td>{{createdUser.profile.name}}</td>
                         <td>
-                            <a href="{{pathFor 'newsFeedView'}}" class="btn btn-default"><i class="glyphicon glyphicon-eye-open"></i></a>
-                            <a href="{{pathFor 'newsFeedUpdate'}}" class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i></a>
+                            <a href="{{pathFor 'newsFeedsLikedView'}}" class="btn btn-default"><i class="glyphicon glyphicon-eye-open"></i></a>
+                            <a href="{{pathFor 'newsFeedsLikedUpdate'}}" class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i></a>
                             <a id="btnRemove" class="btn btn-danger"><i class="glyphicon glyphicon-trash"></i></a>
                         </td>
                     </tr>
