--- a/client/templates/basic/header.html
+++ b/client/templates/basic/header.html
@@ -1,6 +1,16 @@
 <template name="templateBasicHeader">
     <nav class="meteoris-navbar navbar navbar-default" role="navigation">
         <div class="container">
+            <div id="topMenu" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names topmenubar topmenubar-1">
+                <img id="menuicon" class="menuicon menuicon-1" src="/images/macaw/Menu-icon-24x20.png" data-rimage data-src="/images/macaw/Menu-icon-24x20.png">
+                <img id="Chkralogo" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names chkralogo chkralogo-1" src="/images/macaw/chkra_logo-101x49.png" data-rimage data-src="images/chkra_logo-101x49.png" data-srcat2x="images/chkra_logo-101x49@2x.png">
+                <img id="searchicon" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names searchicon searchicon-1" src="/images/macaw/search.svg">
+                <img id="messageicon" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names messageicon messageicon-1" src="/images/macaw/message.svg">
+                <img id="bellicon" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names notificationicon notificationicon-1" src="/images/macaw/notification-20x20.png" data-rimage data-src="images/notification-20x20.png">
+                <img id="userpic-top" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names useravatar useravatar-1" src="/images/macaw/profileimg.svg">
+                <p id="username-top" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names username-topright username-topright-1"><span>@abchauh</span></p>
+                </div>
+            <br /> <br /><br /> <br />
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
