--- a/client/css/macaw/styles.css
+++ b/client/css/macaw/styles.css
@@ -759,9 +759,8 @@ input {
   width: 69.9994281793%;
   max-height: 35px;
   margin-left: 3.99989%;
-  background-color: #000000;
   font: 18px/2 'Open Sans';
-  color: #ffffff;
+  color: #000000;
 }
 
 .topmenubar {
