--- a/client/templates/basic/footer.html
+++ b/client/templates/basic/footer.html
@@ -1,7 +1,7 @@
 <template name="templateBasicFooter">
     <footer class="meteoris-footer">
         <div class="container text-center">
-            <span class="copyright">copyright &copy; 
+            <span class="copyright"> A product of Peacers Ltd. &copy; Chkra,  &copy; Peacers
                  <br/>Powered by <a href="https://github.com/radiegtya/meteoris" target="_blank">Meteoris</a>,
                 a <a href="http://meteor.com" target="_blank">Meteor Js</a> Boilerplate</span>
         </div>
