rolled back buggy template addition
Rolled back to start of template addition.

--- a/client/templates/basic/footer.html
+++ b/client/templates/basic/footer.html
@@ -1,8 +1,9 @@
 <template name="templateBasicFooter">
     <footer class="meteoris-footer">
         <div class="container text-center">
-            <span class="copyright"> A product of Peacers Ltd. &copy; Chkra,  &copy; Peacers
-                 <br/>Powered by <a href="https://github.com/radiegtya/meteoris" target="_blank">Meteoris</a>,
+            <span class="copyright">copyright &copy; 
+                <a href="http://www.piyiku.biz" target="_blank">PT. Piyiku Global Sinergi</a>. 
+                <br/>Powered by <a href="https://github.com/radiegtya/meteoris" target="_blank">Meteoris</a>, 
                 a <a href="http://meteor.com" target="_blank">Meteor Js</a> Boilerplate</span>
         </div>
     </footer>
