--- a/client/views/causes/causesShareBar.html
+++ b/client/views/causes/causesShareBar.html
@@ -5,7 +5,7 @@
     </p>
 
 
-    {{title}} : {{promoteCount}}
+    {{title}} is promoted : {{promoteCount}}
 
     {{#each causesUpdates}}
         <tr>
