--- a/client/views/posts/_form.html
+++ b/client/views/posts/_form.html
@@ -50,7 +50,7 @@
             <label for="URL" class="control-label">URL</label>
             <input type="text" id="URL" class="form-control">
             <span class="help-block">{{error "URL"}}</span>
-        </div>¡€
+        </div>
         <div class="form-group {{#if error 'status'}}has-error{{/if}}">
             <label for="status" class="control-label">Status</label>
             <select id="status" class="form-control">
