--- a/client/views/campaigns/view.html
+++ b/client/views/campaigns/view.html
@@ -19,92 +19,41 @@
                 <a id="btnRemove" class="btn btn-danger">Remove</a>
             </div>
         </div>
-            {{> campUpdatesList model}}
+        {{> campUpdatesList model}}
         <div class="clearfix"></div>
         <table class="table">
             <tbody>
+
                 <tr>
-<td><b>Title</b></td>
-<td>{{title}}</td>
-</tr>
-<tr>
-<td><b>Header Image</b></td>
-    <td><img src="{{#if image}}{{app "baseUrl"}}{{image.url}}{{else}}{{app "baseUrl"}}/images/noimage.jpg{{/if}}"/></td>
+                    <td><b>Title</b></td>
+                    <td>{{title}}</td>
+                </tr>
 
-</tr>
-<tr>
-<td><b>About</b></td>
-<td>{{about}}</td>
-</tr>
-<tr>
-<td><b>Supporters</b></td>
-<td>{{supporters}}</td>
-</tr>
-<tr>
-<td><b>Promote</b></td>
-<td>{{promoteCount}}</td>
-</tr>
-<tr>
-<td><b>Share</b></td>
-<td>{{sharedCount}}</td>
-</tr>
-<tr>
-<td><b>Country</b></td>
-<td>{{country}}</td>
-</tr>
-<tr>
-<td><b>City</b></td>
-<td>{{city}}</td>
-</tr>
-<tr>
-<td><b>ownerid</b></td>
-<td>{{ownerid}}</td>
-</tr>
-<tr>
-<td><b>Owner</b></td>
-<td>{{ownernickname}}</td>
-</tr>
-<tr>
-<td><b>Type</b></td>
-<td>{{type}}</td>
-</tr>
-<tr>
-<td><b>Links to other blocks</b></td>
-<td>{{linkedToBlocks}}</td>
-</tr>
-<tr>
-<td><b>Status</b></td>
-<td>{{status}}</td>
-</tr>
-<tr>
-<td><b>Images</b></td>
-<td>{{imgs}}</td>
-</tr>
-<tr>
-<td><b>Thumbnail</b></td>
-<td>{{thumbnail}}</td>
-</tr>
-<tr>
-<td><b>Contributers</b></td>
-<td>{{contributers}}</td>
-</tr>
-<tr>
-<td><b>Organisers</b></td>
-<td>{{organisers}}</td>
-</tr>
-<tr>
-<td><b>Administrators</b></td>
-<td>{{admins}}</td>
-</tr>
-<tr>
-<td><b>Tags, Keywords</b></td>
-<td>{{tags}}</td>
-</tr>
-
-<!--                <tr>
-                    <td><b>Image</b></td>
+                <tr>
+                    <td><b>Header Image</b></td>
                     <td><img src="{{#if image}}{{app "baseUrl"}}{{image.url}}{{else}}{{app "baseUrl"}}/images/noimage.jpg{{/if}}"/></td>
-                </tr>                -->
+
+                </tr>
+                <tr>
+                    <td><b>Campaign Type</b></td>
+                    <td>{{ctype}}</td>
+                </tr>
+                <tr>
+                    <td><b>Campaign Location</b></td>
+                    <td>{{location}}</td>
+                </tr>
+                <tr>
+                    <td><b>Target location</b></td>
+                    <td>{{tlocation}}</td>
+                </tr>
+                <tr>
+                    <td><b>Causes</b></td>
+                    <td>{{causes}}</td>
+                </tr>
+                <!--                                <tr>
+                                                    <td><b>Image</b></td>
+                                                    <td><img src="{{#if image}}{{app "baseUrl"}}{{image.url}}{{else}}{{app "baseUrl"}}/images/noimage.jpg{{/if}}"/></td>
+                                                </tr>                -->
                 <tr>
                     <td><b>Created at</b></td>
                     <td>{{meteorisFormatter "dateTime" createdAt}}</td>
