--- a/client/templates/basic/header.html
+++ b/client/templates/basic/header.html
@@ -2,30 +2,10 @@
     <nav class="meteoris-navbar navbar navbar-default" role="navigation">
         <div class="container">
             <div id="topMenu" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names topmenubar topmenubar-1">
-                <img id="menuicon" class="menuicon menuicon-1" src="/images/macaw/Menu-icon-24x20.png" data-rimage data-src="/images/macaw/Menu-icon-24x20.png">
-                <img id="Chkralogo" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names chkralogo chkralogo-1" src="/images/macaw/chkra_logo-101x49.png" data-rimage data-src="images/chkra_logo-101x49.png" data-srcat2x="images/chkra_logo-101x49@2x.png">
-                <img id="searchicon" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names searchicon searchicon-1" src="/images/macaw/search.svg">
-                <img id="messageicon" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names messageicon messageicon-1" src="/images/macaw/message.svg">
-                <img id="bellicon" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names notificationicon notificationicon-1" src="/images/macaw/notification-20x20.png" data-rimage data-src="images/notification-20x20.png">
-                <img id="userpic-top" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names useravatar useravatar-1" src="/images/macaw/profileimg.svg">
-                <p id="username-top" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names username-topright username-topright-1"><span>@abchauh</span></p>
-                </div>
-            <br /> <br /><br /> <br />
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{{pathFor 'sitesIndex'}}"><img src="/svg/logo.svg"/> {{app "name"}}</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+
+                  <ul class="nav navbar-nav" style="margin-left: 500px;">
                     <li><a href="{{pathFor 'sitesIndex'}}">Home</a></li>
-                     <li class="dropdown">
+                    <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">CRUDs<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="{{pathFor 'postsIndex'}}">Posts</a></li>
@@ -51,42 +31,55 @@
                     </li>
 
                     <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Purge em <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Teams</a></li>
-                        <li><a href="#">Jobs</a></li>
-                    </ul>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Purge em <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Teams</a></li>
+                            <li><a href="#">Jobs</a></li>
+                        </ul>
                     </li>
 
                     <li><a href="{{pathFor 'usersIndex'}}">Users</a></li>
                     {{#if app 'activateMugen'}}
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mugen <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="/mugen">Crudss Generator</a></li>
-                            <li class="divider"></li>
-                            <li><a href="{{pathFor 'mugenRoleActionsManage'}}">Role</a></li>                                                        
-                            <li><a href="{{pathFor 'mugenRoleCollections'}}">Role Collection</a></li>
-                            <li><a href="{{pathFor 'mugenRoleGroups'}}">Role Group</a></li>
-                            <!--<li><a href="{{pathFor 'mugenRoleActions'}}">Role Actions</a></li>-->
-                        </ul>
-                    </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mugen <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="/mugen">Crudss Generator</a></li>
+                                <li class="divider"></li>
+                                <li><a href="{{pathFor 'mugenRoleActionsManage'}}">Role</a></li>
+                                <li><a href="{{pathFor 'mugenRoleCollections'}}">Role Collection</a></li>
+                                <li><a href="{{pathFor 'mugenRoleGroups'}}">Role Group</a></li>
+                                <!--<li><a href="{{pathFor 'mugenRoleActions'}}">Role Actions</a></li>-->
+                            </ul>
+                        </li>
                     {{/if}}
                     <li class="dropdown">
                         {{#if currentUser}}
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{currentUser.profile.name}} <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="{{pathFor 'usersProfile'}}">User Account</a></li>
-                            <li><a href="#">Help</a></li>
-                            <li class="divider"></li>
-                            <li id="btnLogout"><a href="#">Logout</a></li>
-                        </ul>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{currentUser.profile.name}} <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="{{pathFor 'usersProfile'}}">User Account</a></li>
+                                <li><a href="#">Help</a></li>
+                                <li class="divider"></li>
+                                <li id="btnLogout"><a href="#">Logout</a></li>
+                            </ul>
                         {{else}}
-                        <a href="{{pathFor 'usersLogin'}}">Login</a>
+                            <a href="{{pathFor 'usersLogin'}}">Login</a>
                         {{/if}}
                     </li>
                 </ul>
-            </div><!-- /.navbar-collapse -->
+
+
+                <img id="menuicon" class="menuicon menuicon-1" src="/images/macaw/Menu-icon-24x20.png" data-rimage data-src="/images/macaw/Menu-icon-24x20.png">
+                <img id="Chkralogo" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names chkralogo chkralogo-1" src="/images/macaw/chkra_logo-101x49.png" data-rimage data-src="images/chkra_logo-101x49.png" data-srcat2x="images/chkra_logo-101x49@2x.png">
+                <img id="searchicon" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names searchicon searchicon-1" src="/images/macaw/search.svg">
+                <img id="messageicon" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names messageicon messageicon-1" src="/images/macaw/message.svg">
+                <img id="bellicon" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names notificationicon notificationicon-1" src="/images/macaw/notification-20x20.png" data-rimage data-src="images/notification-20x20.png">
+                <img id="userpic-top" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names useravatar useravatar-1" src="/images/macaw/profileimg.svg">
+                <p id="username-top" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names username-topright username-topright-1"><span>@abchauh</span></p>
+
+                </div>
+
+
+
         </div><!-- /.container-fluid -->
     </nav>
 </template>
